fix: tweaked margins/paddings such that when the layout changes from row to column, the sizes jump down a lot more to accomodate the vertical layout

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -47,11 +47,11 @@ body {
   padding-top: rem(38.2px);
 
   @include breakpoint-up(sm) {
-    padding-top: rem(46px);
+    padding-top: rem(42px);
   }
 
     @include breakpoint-up(md) {
-    padding-top: rem(55px);
+    padding-top: rem(46px);
   }
 
   @include breakpoint-up(lg) {
